--- a/index.html
+++ b/index.html
@@ -17,8 +17,46 @@
 
 <body>
 
+    <div id="preloader">
+        <div id="status">
+            &nbsp;
+        </div>
+    </div>
 
-    <h1>Welcome!</h1>
+     <section id="home">
+        <video id="home-bg-video" poster="video/solo.jpg" autoplay loop muted>
+            <source src="video/solo.mp4" type="video/mp4">
+            <source src="video/solo.ogv" type="video/ogv">
+            <source src="video/solo.webm" type="video/webm">    
+        </video>
+
+        <div id="home-overlay"></div>
+
+        <div id="home-content">
+            <div id="home-content-inner" class="text-center">
+                <div id="home-heading">
+                     <h1 id="home-heading-1">Digital</h1> <br>
+                     <h1 id="home-heading-2">Creative</h1> <br>   
+                </div>
+                <div id="home-text">
+                     Hello to all!!!
+                </div>
+
+                <div id="home-btn">
+                    <a class="btn btn-general btn-home" href="#about" role="button">Start Now</a> 
+                </div>
+
+
+            </div>
+
+
+        </div>
+        <a href="#about" id="arrow-down">
+             <i class="fa-angle-down"></i>
+        </a>
+     </section>
+
+     <section><br><br><br><br><br><br><br><br><br><br><br><br></section>
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap/bootstrap.js"></script>
